@@ -1,3 +1,6 @@
+2002-03-22 02:45
+ All:
+  - Renamed *.cc to *.cxx for MS Visual C++, thanks Clinton James
 2002-03-20 14:15
  Result:
   - Fixed to compile errors on gcc 2.96.x, thanks Vyacheslav Ignatyuk
